# dune-em

./: CMakeLists.txt  README.md  config.h.cmake  dune-em.pc.in  dune.module
cmake/modules/: CMakeLists.txt
doc/doxygen/: Doxylocal
dune/: CMakeLists.txt
dune/electromechanics/: CMakeLists.txt
dune/electromechanics/common/: cardiac_util.hh  helper.hh  iobase.hh  ms_regularized.hh  ms_regularized_base.hh  odesolvers.hh  output.hh  rosenbrocksolver.hh  vtkoutput.hh
dune/electromechanics/elasticity_setup/: baseGridModel.hh  dirichletBC.hh  hyperelasticityGridModel.hh
dune/electromechanics/em_coupled/: CMakeLists-old.txt  driver_em.hh  electromechanics.cc  schemes.hh
dune/electromechanics/em_coupled/paramL2space/: electromechanical2D_1200.ini  electromechanical2D_160.ini  electromechanical2D_300.ini  electromechanical2D_600.ini  electromechanical2D_80.ini
dune/electromechanics/em_partitioned/: CMakeLists.txt  electromechanical.cc  electromechanical.hh  finiteelasticity.hh  monodomain.hh
dune/electromechanics/em_partitioned/paramL2space/: electromechanical2D_1200.ini  electromechanical2D_160.ini  electromechanical2D_300.ini  electromechanical2D_600.ini  electromechanical2D_80.ini  parameters.ini
dune/electromechanics/localoperators/: disc.hh  electromechanical_intra_coupled_lop.hh  fem_massmatrix.hh  fem_rbmatrix.hh  fem_rbmatrix_mea.hh  fem_stiffnessmatrix_extra.hh  fem_stiffnessmatrix_intra.hh  mechanical-lop.hh  taylorhoodmechanicallop.hh
dune/em/: CMakeLists.txt  em.hh
src/: CMakeLists.txt  dune-em.cc
